--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li>curso 1</li>
-        <li>curso 2</li>
+        <li>curso 2 - docker</li>
         <li>curso 3</li>
         <li>curso 4</li>
     </ul>
