adicionando novo curso

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li>curso 1</li>
+        <li>curso 1 - c#</li>
         <li>curso 2 - docker</li>
         <li>curso 3</li>
         <li>curso 4 - javascript</li>
