--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>curso 1</li>
         <li>curso 2 - docker</li>
         <li>curso 3</li>
-        <li>curso 4</li>
+        <li>curso 4 - javascript</li>
     </ul>
 </body>
 </html>
