adicionando novo curso

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <ul>
         <li>curso 1 - c#</li>
         <li>curso 2 - docker</li>
-        <li>curso 3</li>
-        <li>curso 4 - javascript</li>
+        <li>curso 3 - html/css</li>
+        <li>curso 4 - java</li>
     </ul>
 </body>
 </html>
